src/js/grammar/MiniParser.js
// Generated from src/js/grammar/Mini.g4 by ANTLR 4.7.1
// jshint ignore: start
const antlr4 = require('antlr4');
const MiniListener = require('./MiniListener').MiniListener;
const MiniVisitor = require('./MiniVisitor').MiniVisitor;


/* package declaration here */

// eslint-disable-next-line no-unused-vars
const grammarFileName = 'Mini.g4';


const symbolicNames = [null, null, null, null, null, null, null, null, null,
  null, null, null, null, null, null, null, null, null,
  null, null, null, null, null, null, null, null, null,
  null, null, null, null, null, null, null, null, null,
  null, null, null, 'ID', 'INTEGER', 'WS', 'COMMENT'];

const ruleNames = ['rProgram', 'rTypes', 'rTypeDeclaration', 'rNestedDecl',
  'rDecl', 'rType', 'rDeclarations', 'rDeclaration', 'rFunctions',
  'rFunction', 'rParameters', 'rReturnType', 'rStatement',
  'rBlock', 'rStatementList', 'rLvalue', 'rExpression',
  'rArguments'];

function MiniParser (input) {
  antlr4.Parser.call(this, input);
  this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
  this.ruleNames = ruleNames;
  this.literalNames = literalNames;
  this.symbolicNames = symbolicNames;
  return this;
}

MiniParser.prototype = Object.create(antlr4.Parser.prototype);
MiniParser.prototype.constructor = MiniParser;

Object.defineProperty(MiniParser.prototype, 'atn', {
  get : function() {
    return atn;
  }
});

MiniParser.EOF = antlr4.Token.EOF;
MiniParser.T__0 = 1;
MiniParser.T__1 = 2;
MiniParser.T__2 = 3;
MiniParser.T__3 = 4;
MiniParser.T__4 = 5;
MiniParser.T__5 = 6;
MiniParser.T__6 = 7;
MiniParser.T__7 = 8;
MiniParser.T__8 = 9;
MiniParser.T__9 = 10;
MiniParser.T__10 = 11;
MiniParser.T__11 = 12;
MiniParser.T__12 = 13;
MiniParser.T__13 = 14;
MiniParser.T__14 = 15;
MiniParser.T__15 = 16;
MiniParser.T__16 = 17;
MiniParser.T__17 = 18;
MiniParser.T__18 = 19;
MiniParser.T__19 = 20;
MiniParser.T__20 = 21;
MiniParser.T__21 = 22;
MiniParser.T__22 = 23;
MiniParser.T__23 = 24;
MiniParser.T__24 = 25;
MiniParser.T__25 = 26;
MiniParser.T__26 = 27;
MiniParser.T__27 = 28;
MiniParser.T__28 = 29;
MiniParser.T__29 = 30;
MiniParser.T__30 = 31;
MiniParser.T__31 = 32;
MiniParser.T__32 = 33;
MiniParser.T__33 = 34;
MiniParser.T__34 = 35;
MiniParser.T__35 = 36;
MiniParser.T__36 = 37;
MiniParser.T__37 = 38;
MiniParser.ID = 39;
MiniParser.INTEGER = 40;
MiniParser.WS = 41;
MiniParser.COMMENT = 42;

MiniParser.RULE_rProgram = 0;
MiniParser.RULE_rTypes = 1;
MiniParser.RULE_rTypeDeclaration = 2;
MiniParser.RULE_rNestedDecl = 3;
MiniParser.RULE_rDecl = 4;
MiniParser.RULE_rType = 5;
MiniParser.RULE_rDeclarations = 6;
MiniParser.RULE_rDeclaration = 7;
MiniParser.RULE_rFunctions = 8;
MiniParser.RULE_rFunction = 9;
MiniParser.RULE_rParameters = 10;
MiniParser.RULE_rReturnType = 11;
MiniParser.RULE_rStatement = 12;
MiniParser.RULE_rBlock = 13;
MiniParser.RULE_rStatementList = 14;
MiniParser.RULE_rLvalue = 15;
MiniParser.RULE_rExpression = 16;
MiniParser.RULE_rArguments = 17;

function RProgramContext(parser, parent, invokingState) {
  if(parent===undefined) {
    parent = null;
  }
  if(invokingState===undefined || invokingState===null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = MiniParser.RULE_rProgram;
  return this;
}

RProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RProgramContext.prototype.constructor = RProgramContext;

RProgramContext.prototype.rTypes = function() {
  return this.getTypedRuleContext(RTypesContext,0);
};

RProgramContext.prototype.rDeclarations = function() {
  return this.getTypedRuleContext(RDeclarationsContext,0);
};

RProgramContext.prototype.rFunctions = function() {
  return this.getTypedRuleContext(RFunctionsContext,0);
};

RProgramContext.prototype.EOF = function() {
  return this.getToken(MiniParser.EOF, 0);
};

RProgramContext.prototype.enterRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.enterRProgram(this);
  }
};

RProgramContext.prototype.exitRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.exitRProgram(this);
  }
};

RProgramContext.prototype.accept = function(visitor) {
  if ( visitor instanceof MiniVisitor ) {
    return visitor.visitRProgram(this);
  } else {
    return visitor.visitChildren(this);
  }
};




MiniParser.RProgramContext = RProgramContext;

MiniParser.prototype.rProgram = function() {

  var localctx = new RProgramContext(this, this._ctx, this.state);
  this.enterRule(localctx, 0, MiniParser.RULE_rProgram);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 36;
    this.rTypes();
    this.state = 37;
    this.rDeclarations();
    this.state = 38;
    this.rFunctions();
    this.state = 39;
    this.match(MiniParser.EOF);
  } catch (re) {
    if(re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function RTypesContext(parser, parent, invokingState) {
  if(parent===undefined) {
    parent = null;
  }
  if(invokingState===undefined || invokingState===null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = MiniParser.RULE_rTypes;
  return this;
}

RTypesContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RTypesContext.prototype.constructor = RTypesContext;

RTypesContext.prototype.rTypeDeclaration = function(i) {
  if(i===undefined) {
    i = null;
  }
  if(i===null) {
    return this.getTypedRuleContexts(RTypeDeclarationContext);
  } else {
    return this.getTypedRuleContext(RTypeDeclarationContext,i);
  }
};

RTypesContext.prototype.enterRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.enterRTypes(this);
  }
};

RTypesContext.prototype.exitRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.exitRTypes(this);
  }
};

RTypesContext.prototype.accept = function(visitor) {
  if ( visitor instanceof MiniVisitor ) {
    return visitor.visitRTypes(this);
  } else {
    return visitor.visitChildren(this);
  }
};




MiniParser.RTypesContext = RTypesContext;

MiniParser.prototype.rTypes = function() {

  var localctx = new RTypesContext(this, this._ctx, this.state);
  this.enterRule(localctx, 2, MiniParser.RULE_rTypes);
  try {
    this.state = 48;
    this._errHandler.sync(this);
    var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
    switch(la_) {
    case 1:
      this.enterOuterAlt(localctx, 1);
      this.state = 44;
      this._errHandler.sync(this);
      var _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
      while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
        if(_alt===1) {
          this.state = 41;
          this.rTypeDeclaration(); 
        }
        this.state = 46;
        this._errHandler.sync(this);
        _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
      }

      break;

    case 2:
      this.enterOuterAlt(localctx, 2);

      break;

    }
  } catch (re) {
    if(re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function RTypeDeclarationContext(parser, parent, invokingState) {
  if(parent===undefined) {
    parent = null;
  }
  if(invokingState===undefined || invokingState===null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = MiniParser.RULE_rTypeDeclaration;
  return this;
}

RTypeDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RTypeDeclarationContext.prototype.constructor = RTypeDeclarationContext;

RTypeDeclarationContext.prototype.ID = function() {
  return this.getToken(MiniParser.ID, 0);
};

RTypeDeclarationContext.prototype.rNestedDecl = function() {
  return this.getTypedRuleContext(RNestedDeclContext,0);
};

RTypeDeclarationContext.prototype.enterRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.enterRTypeDeclaration(this);
  }
};

RTypeDeclarationContext.prototype.exitRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.exitRTypeDeclaration(this);
  }
};

RTypeDeclarationContext.prototype.accept = function(visitor) {
  if ( visitor instanceof MiniVisitor ) {
    return visitor.visitRTypeDeclaration(this);
  } else {
    return visitor.visitChildren(this);
  }
};




MiniParser.RTypeDeclarationContext = RTypeDeclarationContext;

MiniParser.prototype.rTypeDeclaration = function() {

  var localctx = new RTypeDeclarationContext(this, this._ctx, this.state);
  this.enterRule(localctx, 4, MiniParser.RULE_rTypeDeclaration);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 50;
    this.match(MiniParser.T__0);
    this.state = 51;
    this.match(MiniParser.ID);
    this.state = 52;
    this.match(MiniParser.T__1);
    this.state = 53;
    this.rNestedDecl();
    this.state = 54;
    this.match(MiniParser.T__2);
    this.state = 55;
    this.match(MiniParser.T__3);
  } catch (re) {
    if(re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function RNestedDeclContext(parser, parent, invokingState) {
  if(parent===undefined) {
    parent = null;
  }
  if(invokingState===undefined || invokingState===null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = MiniParser.RULE_rNestedDecl;
  return this;
}

RNestedDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RNestedDeclContext.prototype.constructor = RNestedDeclContext;

RNestedDeclContext.prototype.rDecl = function(i) {
  if(i===undefined) {
    i = null;
  }
  if(i===null) {
    return this.getTypedRuleContexts(RDeclContext);
  } else {
    return this.getTypedRuleContext(RDeclContext,i);
  }
};

RNestedDeclContext.prototype.enterRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.enterRNestedDecl(this);
  }
};

RNestedDeclContext.prototype.exitRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.exitRNestedDecl(this);
  }
};

RNestedDeclContext.prototype.accept = function(visitor) {
  if ( visitor instanceof MiniVisitor ) {
    return visitor.visitRNestedDecl(this);
  } else {
    return visitor.visitChildren(this);
  }
};




MiniParser.RNestedDeclContext = RNestedDeclContext;

MiniParser.prototype.rNestedDecl = function() {

  var localctx = new RNestedDeclContext(this, this._ctx, this.state);
  this.enterRule(localctx, 6, MiniParser.RULE_rNestedDecl);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 60; 
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    do {
      this.state = 57;
      this.rDecl();
      this.state = 58;
      this.match(MiniParser.T__3);
      this.state = 62; 
      this._errHandler.sync(this);
      _la = this._input.LA(1);
    } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << MiniParser.T__0) | (1 << MiniParser.T__4) | (1 << MiniParser.T__5))) !== 0));
  } catch (re) {
    if(re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function RDeclContext(parser, parent, invokingState) {
  if(parent===undefined) {
    parent = null;
  }
  if(invokingState===undefined || invokingState===null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = MiniParser.RULE_rDecl;
  return this;
}

RDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RDeclContext.prototype.constructor = RDeclContext;

RDeclContext.prototype.rType = function() {
  return this.getTypedRuleContext(RTypeContext,0);
};

RDeclContext.prototype.ID = function() {
  return this.getToken(MiniParser.ID, 0);
};

RDeclContext.prototype.enterRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.enterRDecl(this);
  }
};

RDeclContext.prototype.exitRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.exitRDecl(this);
  }
};

RDeclContext.prototype.accept = function(visitor) {
  if ( visitor instanceof MiniVisitor ) {
    return visitor.visitRDecl(this);
  } else {
    return visitor.visitChildren(this);
  }
};




MiniParser.RDeclContext = RDeclContext;

MiniParser.prototype.rDecl = function() {

  var localctx = new RDeclContext(this, this._ctx, this.state);
  this.enterRule(localctx, 8, MiniParser.RULE_rDecl);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 64;
    this.rType();
    this.state = 65;
    this.match(MiniParser.ID);
  } catch (re) {
    if(re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function RTypeContext(parser, parent, invokingState) {
  if(parent===undefined) {
    parent = null;
  }
  if(invokingState===undefined || invokingState===null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = MiniParser.RULE_rType;
  return this;
}

RTypeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RTypeContext.prototype.constructor = RTypeContext;


 
RTypeContext.prototype.copyFrom = function(ctx) {
  antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function BoolTypeContext(parser, ctx) {
  RTypeContext.call(this, parser);
  RTypeContext.prototype.copyFrom.call(this, ctx);
  return this;
}

BoolTypeContext.prototype = Object.create(RTypeContext.prototype);
BoolTypeContext.prototype.constructor = BoolTypeContext;

MiniParser.BoolTypeContext = BoolTypeContext;

BoolTypeContext.prototype.enterRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.enterBoolType(this);
  }
};

BoolTypeContext.prototype.exitRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.exitBoolType(this);
  }
};

BoolTypeContext.prototype.accept = function(visitor) {
  if ( visitor instanceof MiniVisitor ) {
    return visitor.visitBoolType(this);
  } else {
    return visitor.visitChildren(this);
  }
};


function StructTypeContext(parser, ctx) {
  RTypeContext.call(this, parser);
  RTypeContext.prototype.copyFrom.call(this, ctx);
  return this;
}

StructTypeContext.prototype = Object.create(RTypeContext.prototype);
StructTypeContext.prototype.constructor = StructTypeContext;

MiniParser.StructTypeContext = StructTypeContext;

StructTypeContext.prototype.ID = function() {
  return this.getToken(MiniParser.ID, 0);
};
StructTypeContext.prototype.enterRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.enterStructType(this);
  }
};

StructTypeContext.prototype.exitRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.exitStructType(this);
  }
};

StructTypeContext.prototype.accept = function(visitor) {
  if ( visitor instanceof MiniVisitor ) {
    return visitor.visitStructType(this);
  } else {
    return visitor.visitChildren(this);
  }
};


function IntTypeContext(parser, ctx) {
  RTypeContext.call(this, parser);
  RTypeContext.prototype.copyFrom.call(this, ctx);
  return this;
}

IntTypeContext.prototype = Object.create(RTypeContext.prototype);
IntTypeContext.prototype.constructor = IntTypeContext;

MiniParser.IntTypeContext = IntTypeContext;

IntTypeContext.prototype.enterRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.enterIntType(this);
  }
};

IntTypeContext.prototype.exitRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.exitIntType(this);
  }
};

IntTypeContext.prototype.accept = function(visitor) {
  if ( visitor instanceof MiniVisitor ) {
    return visitor.visitIntType(this);
  } else {
    return visitor.visitChildren(this);
  }
};



MiniParser.RTypeContext = RTypeContext;

MiniParser.prototype.rType = function() {

  var localctx = new RTypeContext(this, this._ctx, this.state);
  this.enterRule(localctx, 10, MiniParser.RULE_rType);
  try {
    this.state = 71;
    this._errHandler.sync(this);
    switch(this._input.LA(1)) {
    case MiniParser.T__4:
      localctx = new IntTypeContext(this, localctx);
      this.enterOuterAlt(localctx, 1);
      this.state = 67;
      this.match(MiniParser.T__4);
      break;
    case MiniParser.T__5:
      localctx = new BoolTypeContext(this, localctx);
      this.enterOuterAlt(localctx, 2);
      this.state = 68;
      this.match(MiniParser.T__5);
      break;
    case MiniParser.T__0:
      localctx = new StructTypeContext(this, localctx);
      this.enterOuterAlt(localctx, 3);
      this.state = 69;
      this.match(MiniParser.T__0);
      this.state = 70;
      this.match(MiniParser.ID);
      break;
    default:
      throw new antlr4.error.NoViableAltException(this);
    }
  } catch (re) {
    if(re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function RDeclarationsContext(parser, parent, invokingState) {
  if(parent===undefined) {
    parent = null;
  }
  if(invokingState===undefined || invokingState===null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = MiniParser.RULE_rDeclarations;
  return this;
}

RDeclarationsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RDeclarationsContext.prototype.constructor = RDeclarationsContext;

RDeclarationsContext.prototype.rDeclaration = function(i) {
  if(i===undefined) {
    i = null;
  }
  if(i===null) {
    return this.getTypedRuleContexts(RDeclarationContext);
  } else {
    return this.getTypedRuleContext(RDeclarationContext,i);
  }
};

RDeclarationsContext.prototype.enterRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.enterRDeclarations(this);
  }
};

RDeclarationsContext.prototype.exitRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.exitRDeclarations(this);
  }
};

RDeclarationsContext.prototype.accept = function(visitor) {
  if ( visitor instanceof MiniVisitor ) {
    return visitor.visitRDeclarations(this);
  } else {
    return visitor.visitChildren(this);
  }
};




MiniParser.RDeclarationsContext = RDeclarationsContext;

MiniParser.prototype.rDeclarations = function() {

  var localctx = new RDeclarationsContext(this, this._ctx, this.state);
  this.enterRule(localctx, 12, MiniParser.RULE_rDeclarations);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 76;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << MiniParser.T__0) | (1 << MiniParser.T__4) | (1 << MiniParser.T__5))) !== 0)) {
      this.state = 73;
      this.rDeclaration();
      this.state = 78;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
    }
  } catch (re) {
    if(re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function RDeclarationContext(parser, parent, invokingState) {
  if(parent===undefined) {
    parent = null;
  }
  if(invokingState===undefined || invokingState===null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = MiniParser.RULE_rDeclaration;
  return this;
}

RDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RDeclarationContext.prototype.constructor = RDeclarationContext;

RDeclarationContext.prototype.rType = function() {
  return this.getTypedRuleContext(RTypeContext,0);
};

RDeclarationContext.prototype.ID = function(i) {
  if(i===undefined) {
    i = null;
  }
  if(i===null) {
    return this.getTokens(MiniParser.ID);
  } else {
    return this.getToken(MiniParser.ID, i);
  }
};


RDeclarationContext.prototype.enterRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.enterRDeclaration(this);
  }
};

RDeclarationContext.prototype.exitRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.exitRDeclaration(this);
  }
};

RDeclarationContext.prototype.accept = function(visitor) {
  if ( visitor instanceof MiniVisitor ) {
    return visitor.visitRDeclaration(this);
  } else {
    return visitor.visitChildren(this);
  }
};




MiniParser.RDeclarationContext = RDeclarationContext;

MiniParser.prototype.rDeclaration = function() {

  var localctx = new RDeclarationContext(this, this._ctx, this.state);
  this.enterRule(localctx, 14, MiniParser.RULE_rDeclaration);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 79;
    this.rType();
    this.state = 80;
    this.match(MiniParser.ID);
    this.state = 85;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    while(_la===MiniParser.T__6) {
      this.state = 81;
      this.match(MiniParser.T__6);
      this.state = 82;
      this.match(MiniParser.ID);
      this.state = 87;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
    }
    this.state = 88;
    this.match(MiniParser.T__3);
  } catch (re) {
    if(re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function RFunctionsContext(parser, parent, invokingState) {
  if(parent===undefined) {
    parent = null;
  }
  if(invokingState===undefined || invokingState===null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = MiniParser.RULE_rFunctions;
  return this;
}

RFunctionsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RFunctionsContext.prototype.constructor = RFunctionsContext;

RFunctionsContext.prototype.rFunction = function(i) {
  if(i===undefined) {
    i = null;
  }
  if(i===null) {
    return this.getTypedRuleContexts(RFunctionContext);
  } else {
    return this.getTypedRuleContext(RFunctionContext,i);
  }
};

RFunctionsContext.prototype.enterRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.enterRFunctions(this);
  }
};

RFunctionsContext.prototype.exitRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.exitRFunctions(this);
  }
};

RFunctionsContext.prototype.accept = function(visitor) {
  if ( visitor instanceof MiniVisitor ) {
    return visitor.visitRFunctions(this);
  } else {
    return visitor.visitChildren(this);
  }
};




MiniParser.RFunctionsContext = RFunctionsContext;

MiniParser.prototype.rFunctions = function() {

  var localctx = new RFunctionsContext(this, this._ctx, this.state);
  this.enterRule(localctx, 16, MiniParser.RULE_rFunctions);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 93;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    while(_la===MiniParser.T__7) {
      this.state = 90;
      this.rFunction();
      this.state = 95;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
    }
  } catch (re) {
    if(re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function RFunctionContext(parser, parent, invokingState) {
  if(parent===undefined) {
    parent = null;
  }
  if(invokingState===undefined || invokingState===null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = MiniParser.RULE_rFunction;
  return this;
}

RFunctionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RFunctionContext.prototype.constructor = RFunctionContext;

RFunctionContext.prototype.ID = function() {
  return this.getToken(MiniParser.ID, 0);
};

RFunctionContext.prototype.rParameters = function() {
  return this.getTypedRuleContext(RParametersContext,0);
};

RFunctionContext.prototype.rReturnType = function() {
  return this.getTypedRuleContext(RReturnTypeContext,0);
};

RFunctionContext.prototype.rDeclarations = function() {
  return this.getTypedRuleContext(RDeclarationsContext,0);
};

RFunctionContext.prototype.rStatementList = function() {
  return this.getTypedRuleContext(RStatementListContext,0);
};

RFunctionContext.prototype.enterRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.enterRFunction(this);
  }
};

RFunctionContext.prototype.exitRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.exitRFunction(this);
  }
};

RFunctionContext.prototype.accept = function(visitor) {
  if ( visitor instanceof MiniVisitor ) {
    return visitor.visitRFunction(this);
  } else {
    return visitor.visitChildren(this);
  }
};




MiniParser.RFunctionContext = RFunctionContext;

MiniParser.prototype.rFunction = function() {

  var localctx = new RFunctionContext(this, this._ctx, this.state);
  this.enterRule(localctx, 18, MiniParser.RULE_rFunction);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 96;
    this.match(MiniParser.T__7);
    this.state = 97;
    this.match(MiniParser.ID);
    this.state = 98;
    this.rParameters();
    this.state = 99;
    this.rReturnType();
    this.state = 100;
    this.match(MiniParser.T__1);
    this.state = 101;
    this.rDeclarations();
    this.state = 102;
    this.rStatementList();
    this.state = 103;
    this.match(MiniParser.T__2);
  } catch (re) {
    if(re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function RParametersContext(parser, parent, invokingState) {
  if(parent===undefined) {
    parent = null;
  }
  if(invokingState===undefined || invokingState===null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = MiniParser.RULE_rParameters;
  return this;
}

RParametersContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RParametersContext.prototype.constructor = RParametersContext;

RParametersContext.prototype.rDecl = function(i) {
  if(i===undefined) {
    i = null;
  }
  if(i===null) {
    return this.getTypedRuleContexts(RDeclContext);
  } else {
    return this.getTypedRuleContext(RDeclContext,i);
  }
};

RParametersContext.prototype.enterRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.enterRParameters(this);
  }
};

RParametersContext.prototype.exitRule = function(listener) {
  if(listener instanceof MiniListener ) {
    listener.exitRParameters(this);
  }
};

RParametersContext.prototype.accept = function(visitor) {
  if ( visitor instanceof MiniVisitor ) {
    return visitor.visitRParameters(this);
  } else {
    return visitor.visitChildren(this);
  }
};




MiniParser.RParametersContext = RParametersContext;

MiniParser.prototype.rParameters = function() {

  var localctx = new RParametersContext(this, this._ctx, this.state);
  this.enterRule(localctx, 20, MiniParser.RULE_rParameters);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 105;
    this.match(MiniParser.T__8);
    this.state = 114;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << MiniParser.T__0) | (1 << MiniParser.T__4) | (1 << MiniParser.T__5))) !== 0)) {
      this.state = 106;
      this.rDecl();
      this.state = 111;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      while(_la===MiniParser.T__6) {
        this.state = 107;
        this.match(MiniParser.T__6);
        this.state = 108;
        this.rDecl();
        this.state = 113;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      }
    }

    this.state = 116;
    this.match(MiniParser.T__9);
  } catch (re) {
    if(re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};
